--- a/css/style.css
+++ b/css/style.css
@@ -6,24 +6,28 @@
     text-decoration: none;
 }
 
+/**Configuracion de Grid*/
+
+.index__grid-container{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);    
+    grid-template-areas: 
+    "header header header"
+    "nav nav nav"
+    "main main main"
+    "main main main"
+    "main main main"
+    "footer footer footer"
+}
+
 /*-----header-----*/
+
 header {
     background-color: #ced8e0;
     margin: 0px;
     padding: 0px;
-}
-
-.header__h{
-    color: #293845;
-    font-size: 60px;
-    width: 40%;
-    padding: 0px 60px 0px 60px;
-    text-shadow: 1px 1px 3px black;
-}
-
-.header__img {
-    height: 250px;
-    width: 250px;
+    grid-area: header;
+    height: fit-content;
 }
 
 header section{
@@ -31,14 +35,34 @@ header section{
     align-items: center;
     justify-content: center;
     font-family: 'Secular One', sans-serif;
-    font-size: 55px;
     text-align: center;
+    height: fit-content;
 }
 
+.header__h{
+    color: #293845;
+    font-size: 55px;
+    width: 40%;
+    padding: 0px 30px 0px 30px;
+    text-shadow: 1px 1px 3px black;
+}
+
+.header__img {
+    width: 17%;
+}
+
+/**nav**/
+
+nav{
+    grid-area: nav;
+    background-color: #ced8e0;
+    height: fit-content;
+}
 
 /**main - index**/
 
     main{
+        grid-area: main;
         background-color: antiquewhite;
         font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     }
@@ -215,32 +239,18 @@ footer{
     text-decoration-color: black;
     margin: 0px;
     padding: 0px;
+    grid-area: footer;
 }
 
-footer nav ul{
+.footer__div__pie {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
-}
-
-footer nav ul li{
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-size: medium;
-    text-decoration: underline;
-    color: white;
-    margin: 10px;
-    padding: 10px;
-    margin-top: 0px;
-}
-
-footer div{
-    display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
-footer div img{
-    height: 50px;
-    width: 50px;
+footer div div img{
+    height: 35px;
     padding-left: 10px;
 }
 
