--- a/css/style.css
+++ b/css/style.css
@@ -305,21 +305,24 @@ main {
 
 /**main - experiencias**/
 
-.main_section_experiencias {
-    margin: 3%;
-
-}
 
 .main_section_experiencias h4 {
-    font-size: 30px;
+    font-size: 2rem;
+    text-align: center;
+}
+.main_section_experiencias div p button{
+    background-color: black;
+    box-shadow: 5px 5px 5px 3px rgba(0, 0, 0, 0.5);
 }
 
-.main_section_experiencias img {
-    align-items: center;
-    width: min-content;
-    height: auto;
+.card-body{
+    border: dotted #293845;
 }
-
+.main_section_experiencias_img {
+    width: 100%;
+    padding: 10px;
+    filter: drop-shadow(0 2px 5px rgba(0, 0, 0, 0.7))
+}
 
 
 /****footer***/
