--- a/css/style.css
+++ b/css/style.css
@@ -181,7 +181,7 @@ main {
 
 .formulario div {
     width: 100%;
-    height: 40px;
+    height: 100%;
     justify-content: space-between;
     padding: 10px
 }
@@ -191,7 +191,7 @@ main {
 }
 
 .formulario div input {
-    width: 1200px;
+    width: 100%;
 
 }
 
