--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -199,19 +199,18 @@ main{
 
 /**configuracion experiencias**/
 
-.main_section_experiencias{
+.main__acordeon{
     div{
-        p{
-            button{
-                background-color: black;
-                box-shadow: 5px 5px 5px 3px rgba(0, 0, 0, 0.5);
-            }
-        }
         div{
-            .card-body{
-                border: dotted #293845;
+            h2{
+                button{
+                    background-color: black;
+                    box-shadow: 5px 5px 5px 3px rgba(0, 0, 0, 0.5);
+                }
+            }
+            div{
                 div{
-                    .main_section_experiencias_img{
+                    img{
                         width: 100%;
                         padding: 10px;
                         filter: drop-shadow(0 2px 5px rgba(0, 0, 0, 0.7))
