--- a/css/estilos.css
+++ b/css/estilos.css
@@ -196,11 +196,11 @@ main {
     border-top: dashed #3E5B5F; }
 
 /**configuracion experiencias**/
-.main__acordeon div div h2 button {
+.exp__main__acordeon div div h2 button {
   background-color: black;
   box-shadow: 5px 5px 5px 3px rgba(0, 0, 0, 0.5); }
 
-.main__acordeon div div div div img {
+.exp__main__acordeon div div div div img {
   width: 100%;
   padding: 10px;
   filter: drop-shadow(0 2px 5px rgba(0, 0, 0, 0.7)); }
